hotfix: fixed profile alignment

--- a/blocks/footer/__text/footer__text.css
+++ b/blocks/footer/__text/footer__text.css
@@ -2,8 +2,14 @@
     color: #545454;
     max-width: 880px;
     margin: 0 auto;
-    padding: 0 0 0 19px;
+    padding: 0;
     font-size: 1.125rem;
     line-height: calc(22 / 18);
     box-sizing: content-box;
+}
+
+@media screen and (max-width: 1280px) {
+    .footer__text {
+        padding: 0 0 0 19px;
+    }
 }
