--- a/blocks/places/__favorite/places__favorite.css
+++ b/blocks/places/__favorite/places__favorite.css
@@ -1,7 +1,7 @@
 .places__favorite {
     grid-area: favorite;
     justify-self: flex-end;
-    margin: 0 30px 0 0;
+    margin: 0 22px 0 0;
     padding: 0;
     background-image: url(../../../images/favorite.svg);
     background-repeat: no-repeat;
