--- a/blocks/places/places.css
+++ b/blocks/places/places.css
@@ -7,7 +7,7 @@
 .places {
     max-width: 880px;
     margin: 0 auto;
-    padding: 36px 27px 0 27px;
+    padding: 0 27px 0 27px;
     box-sizing: content-box;
 }
 
