--- a/blocks/profile/__add-button/profile__add-button.css
+++ b/blocks/profile/__add-button/profile__add-button.css
@@ -8,6 +8,7 @@
     background-image: url(../../../images/add-button.svg);
     background-repeat: no-repeat;
     background-position: center;
+    margin: auto;
 }
 
 @media screen and (max-width: 825px) {
