--- a/blocks/profile/__edit/profile__edit.css
+++ b/blocks/profile/__edit/profile__edit.css
@@ -2,7 +2,7 @@
     border: 1px solid #fff;
     height: 24px;
     width: 24px;
-    margin: 0 0 0 18px;
+    margin: 0 0 0 15px;
     background-color: #000;
     background-image: url(../../../images/edit.svg);
     background-repeat: no-repeat;
