--- a/blocks/profile/__name/profile__name.css
+++ b/blocks/profile/__name/profile__name.css
@@ -1,10 +1,10 @@
 .profile__name {
     font-weight: 500;
     padding: 0;
-    margin: 0 0 16px 0;
+    margin: 0;
     font-size: 42px;
     line-height: 1.14;
-    display: inline;
+    display: inline-block;
 }
 
 @media screen and (max-width: 768px) {
