--- a/blocks/profile/__title/profile__title.css
+++ b/blocks/profile/__title/profile__title.css
@@ -1,11 +1,17 @@
 .profile__title {
     padding: 0;
-    margin: 0;
+    margin: 16px 0;
     font-size: 18px;
     line-height: 22px;
 }
 
 @media screen and (max-width: 768px) {
+    .profile__title {
+        text-align: center;
+    }
+}
+
+@media screen and (max-width: 320px) {
     .profile__title {
         text-align: center;
     }
