--- a/blocks/profile/profile.css
+++ b/blocks/profile/profile.css
@@ -12,7 +12,7 @@
     box-sizing: content-box;
     margin: 0 auto;
     padding: 0 27px;
-    grid-template-columns: 168px 1fr 150px;
+    grid-template-columns: 150px 1fr 150px;
     align-items: center;
 }
 
